--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,8 +13,8 @@ repos:
     - id: check-case-conflict
     - id: check-docstring-first
     - id: detect-private-key
+      exclude: ^tests/fixtures/
 - repo: https://github.com/pycqa/flake8
-  rev: 7.1.0
+  rev: 6.0.0
   hooks:
     - id: flake8
-      additional_dependencies: [flake8-bugbear]
