update flake8 configuration for code quality

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [flake8]
 max-line-length = 80
-extend-ignore = E9,F63,F7,F82,W191,W291,E101,E128,E122,E501,E265,W293,E231,E731
+#extend-ignore = E9,F63,F7,F82,W191,W291,E101,E128,E122,E501,E265,W293,E231,E731
 exclude = 
     .git,
     __pycache__,
     migrations,
     settings.py
-ignore = 
-    E203,  # Black compatibility
-    W503   # Line break before binary operator
+ignore = E122
 max-complexity = 10
